--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="color_text">#323232</color>
     <color name="white">#ffffff</color>
     <color name="line_color_d8">#f8f8f8</color>
+    <color name="color_4b_66">#664b4b4b</color>
 
 </resources>
