--- a/Cadres/app/src/main/res/layout/activity_login.xml
+++ b/Cadres/app/src/main/res/layout/activity_login.xml
@@ -6,51 +6,124 @@
     android:layout_height="match_parent"
     tools:context=".view.login.LoginActivity">
 
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/login_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view_pop"
+        android:layout_width="@dimen/dp_480"
+        android:layout_height="@dimen/dp_320"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/shape_00_r20"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="宁乡大干部数据"
-        android:textColor="@color/colorPrimary"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="@dimen/dp_80"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="@dimen/dp_40"
+        android:text="宁乡市干部大数据管理系统"
+        android:textColor="@color/color_c3392d"
+        android:textSize="@dimen/sp_28"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="@+id/view_pop"
+        app:layout_constraintRight_toRightOf="@+id/view_pop"
+        app:layout_constraintTop_toTopOf="@+id/view_pop" />
 
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_account"
-        android:layout_width="@dimen/dp_400"
-        android:layout_height="@dimen/dp_80"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/dp_50"
-        android:background="@color/colorPrimary"
-        android:hint="帐号"
-        app:layout_constraintStart_toStartOf="parent"
+    <View
+        android:id="@+id/view_account"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_38"
+        android:layout_marginTop="@dimen/dp_40"
+        app:layout_constraintStart_toStartOf="@+id/tv_title"
+        app:layout_constraintEnd_toEndOf="@+id/tv_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
 
-    <androidx.appcompat.widget.AppCompatEditText
+    <TextView
+        android:id="@+id/tv_account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="账号："
+        android:textColor="@color/color_c3392d"
+        app:layout_constraintTop_toTopOf="@+id/view_account"
+        app:layout_constraintBottom_toBottomOf="@id/view_account"
+        app:layout_constraintStart_toStartOf="@+id/view_account"
+        />
+
+    <EditText
+        android:id="@+id/et_account"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_10"
+        android:paddingEnd="@dimen/dp_10"
+        android:maxLines="1"
+        android:inputType="text"
+        android:maxLength="20"
+        android:hint="请输入帐号"
+        android:background="@drawable/shape_eeeeeed_r40"
+        app:layout_constraintStart_toEndOf="@+id/tv_account"
+        app:layout_constraintBottom_toBottomOf="@+id/view_account"
+        app:layout_constraintEnd_toEndOf="@+id/view_account"
+        app:layout_constraintTop_toTopOf="@+id/view_account"/>
+
+    <View
+        android:id="@+id/view_password"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_38"
+        android:layout_marginTop="@dimen/dp_20"
+        app:layout_constraintStart_toStartOf="@+id/tv_title"
+        app:layout_constraintEnd_toEndOf="@+id/tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/view_account"/>
+
+    <TextView
+        android:id="@+id/tv_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="密码："
+        android:textColor="@color/color_c3392d"
+        app:layout_constraintTop_toTopOf="@+id/view_password"
+        app:layout_constraintBottom_toBottomOf="@id/view_password"
+        app:layout_constraintStart_toStartOf="@+id/view_password"
+        />
+
+    <EditText
         android:id="@+id/et_password"
-        android:layout_width="@dimen/dp_400"
-        android:layout_height="@dimen/dp_80"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/dp_50"
-        android:background="@color/colorPrimary"
-        android:hint="密码"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_account"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:hint="请输入密码"
+        android:paddingStart="@dimen/dp_10"
+        android:maxLines="1"
+        android:inputType="textPassword"
+        android:maxLength="20"
+        android:paddingEnd="@dimen/dp_10"
+        android:background="@drawable/shape_eeeeeed_r40"
+        app:layout_constraintStart_toEndOf="@+id/tv_password"
+        app:layout_constraintBottom_toBottomOf="@+id/view_password"
+        app:layout_constraintEnd_toEndOf="@+id/view_password"
+        app:layout_constraintTop_toTopOf="@+id/view_password"/>
 
     <TextView
         android:id="@+id/tv_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_38"
+        android:layout_marginTop="@dimen/dp_40"
         android:text="登录"
-        android:textColor="@color/colorPrimary"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="@dimen/dp_80"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_password" />
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:layout_marginStart="@dimen/dp_5"
+        android:layout_marginEnd="@dimen/dp_5"
+        android:background="@drawable/shape_c3392d_r40"
+        app:layout_constraintStart_toStartOf="@+id/tv_title"
+        app:layout_constraintEnd_toEndOf="@+id/tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/view_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
