--- a/Cadres/app/src/main/res/layout/dialog_loading.xml
+++ b/Cadres/app/src/main/res/layout/dialog_loading.xml
@@ -11,7 +11,7 @@
         android:layout_height="120dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/btn_d9_solid_r15"
+        android:background="@drawable/shape_d9_r15"
         android:orientation="vertical">
 
         <LinearLayout
