--- a/Cadres/app/src/main/res/layout/title_layout.xml
+++ b/Cadres/app/src/main/res/layout/title_layout.xml
@@ -4,75 +4,94 @@
     android:id="@+id/title_layout"
     android:layout_width="match_parent"
     android:layout_height="@dimen/title_height"
-    android:background="@color/white"
+    android:background="@color/color_bd1b21"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/left_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/title_height"
+        android:layout_height="@dimen/title_height"
         android:layout_centerVertical="true"
-        android:padding="10dp"
-        android:src="@mipmap/icon_back"
-        android:visibility="gone" />
+        android:src="@mipmap/ic_back"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/ll_right1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dp_20"
+            android:gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/right_iv1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_updata" />
+
+            <TextView
+                android:id="@+id/right_tv1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginStart="@dimen/dp_10"
+                android:text="同步数据" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_right2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/right_iv2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_out" />
+
+            <TextView
+                android:id="@+id/right_tv2"
+                android:layout_width="wrap_content"
+                android:layout_marginStart="@dimen/dp_10"
+                android:textColor="@color/white"
+                android:layout_height="wrap_content"
+                android:text="推出" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/dp_30"
         android:layout_marginRight="@dimen/dp_30"
-        android:layout_centerVertical="true"
         android:ellipsize="end"
         android:gravity="center"
+        android:inputType="text"
         android:maxLines="1"
-        android:inputType = "text"
         android:minHeight="44dp"
-        android:textColor="@color/color_text"
-        android:textSize="17sp"
+        android:textColor="@color/white"
         android:visibility="visible"
         tools:text="Title" />
-
-    <TextView
-        android:id="@+id/right_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="@dimen/dp_10"
-        android:gravity="center"
-        android:paddingBottom="2dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="2dp"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        android:visibility="gone"
-        tools:text="登录"
-        tools:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/right_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:gravity="center"
-        android:paddingBottom="2dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="2dp"
-        tools:src="@mipmap/ic_launcher"
-        android:visibility="gone"
-        tools:visibility="gone" />
-
-    <View
-        android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_1"
-        android:layout_alignParentBottom="true"
-        android:background="@color/line_color_d8" />
 
 </RelativeLayout>
