--- a/Cadres/app/src/main/res/values/dimens.xml
+++ b/Cadres/app/src/main/res/values/dimens.xml
@@ -47,7 +47,15 @@
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_280">280dp</dimen>
     <dimen name="dp_300">300dp</dimen>
+    <dimen name="dp_320">320dp</dimen>
+    <dimen name="dp_340">340dp</dimen>
+    <dimen name="dp_360">360dp</dimen>
+    <dimen name="dp_380">380dp</dimen>
     <dimen name="dp_400">400dp</dimen>
+    <dimen name="dp_460">460dp</dimen>
+    <dimen name="dp_480">480dp</dimen>
+    <dimen name="dp_500">500dp</dimen>
+    <dimen name="dp_600">600dp</dimen>
 
     <dimen name="sp_6">6sp</dimen>
     <dimen name="sp_7">7sp</dimen>
@@ -65,9 +73,21 @@
     <dimen name="sp_22">22sp</dimen>
     <dimen name="sp_24">24sp</dimen>
     <dimen name="sp_26">26sp</dimen>
+    <dimen name="sp_27">27sp</dimen>
+    <dimen name="sp_28">28sp</dimen>
+    <dimen name="sp_29">29sp</dimen>
+    <dimen name="sp_30">30sp</dimen>
+    <dimen name="sp_31">31sp</dimen>
+    <dimen name="sp_32">32sp</dimen>
+    <dimen name="sp_33">33sp</dimen>
+    <dimen name="sp_34">34sp</dimen>
+    <dimen name="sp_35">35sp</dimen>
+    <dimen name="sp_36">36sp</dimen>
+    <dimen name="sp_37">37sp</dimen>
+    <dimen name="sp_38">38sp</dimen>
 
     <dimen name="custom_section_height">36dp</dimen>
-    <dimen name="title_height">42dp</dimen>
+    <dimen name="title_height">55dp</dimen>
     <dimen name="frame_bottom">50dp</dimen>
 
 </resources>
