--- a/Cadres/app/src/main/res/values/styles.xml
+++ b/Cadres/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/sp_16</item>
         <item name="android:textColor">@color/color_text</item>
         <item name="android:windowBackground">@color/color_window_background</item>
     </style>
