--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="color_eeeeed">#eeeeed</color>
     <color name="color_bd1b21">#bd1b21</color>
     <color name="color_fce8e6">#fce8e6</color>
+    <color name="color_fef5ed">#fef5ed</color>
     <color name="black">#000000</color>
 
 </resources>
