--- a/Cadres/app/src/main/res/values/dimens.xml
+++ b/Cadres/app/src/main/res/values/dimens.xml
@@ -45,6 +45,7 @@
     <dimen name="dp_180">180dp</dimen>
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_240">240dp</dimen>
+    <dimen name="dp_260">260dp</dimen>
     <dimen name="dp_280">280dp</dimen>
     <dimen name="dp_300">300dp</dimen>
     <dimen name="dp_320">320dp</dimen>
@@ -52,6 +53,7 @@
     <dimen name="dp_360">360dp</dimen>
     <dimen name="dp_380">380dp</dimen>
     <dimen name="dp_400">400dp</dimen>
+    <dimen name="dp_420">420dp</dimen>
     <dimen name="dp_460">460dp</dimen>
     <dimen name="dp_480">480dp</dimen>
     <dimen name="dp_500">500dp</dimen>
