--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="color_bd1b21">#bd1b21</color>
     <color name="color_fce8e6">#fce8e6</color>
     <color name="color_fef5ed">#fef5ed</color>
+    <color name="color_ffe5ce">#ffe5ce</color>
+    <color name="color_ff7800">#ff7800</color>
+    <color name="color_ffd7b4">#ffd7b4</color>
     <color name="black">#000000</color>
 
 </resources>
