--- a/Cadres/app/src/main/res/values/dimens.xml
+++ b/Cadres/app/src/main/res/values/dimens.xml
@@ -3,7 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="dp_1">0.5dp</dimen>
+    <dimen name="dp_0_5">0.5dp</dimen>
+    <dimen name="dp_1">1dp</dimen>
     <dimen name="dp_2">2dp</dimen>
     <dimen name="dp_3">3dp</dimen>
     <dimen name="dp_4">4dp</dimen>
@@ -44,6 +45,7 @@
     <dimen name="dp_175">175dp</dimen>
     <dimen name="dp_180">180dp</dimen>
     <dimen name="dp_200">200dp</dimen>
+    <dimen name="dp_220">220dp</dimen>
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_260">260dp</dimen>
     <dimen name="dp_280">280dp</dimen>
