--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="color_ffe5ce">#ffe5ce</color>
     <color name="color_ff7800">#ff7800</color>
     <color name="color_ffd7b4">#ffd7b4</color>
+    <color name="color_fdf5ed">#fdf5ed</color>
+    <color name="color_b31f23">#b31f23</color>
     <color name="black">#000000</color>
 
 </resources>
