--- a/Cadres/app/src/main/res/values/dimens.xml
+++ b/Cadres/app/src/main/res/values/dimens.xml
@@ -33,6 +33,7 @@
     <dimen name="dp_50">50dp</dimen>
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_70">70dp</dimen>
+    <dimen name="dp_75">75dp</dimen>
     <dimen name="dp_80">80dp</dimen>
     <dimen name="dp_90">90dp</dimen>
     <dimen name="dp_100">100dp</dimen>
