--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -13,12 +13,15 @@
     <color name="color_eeeeed">#eeeeed</color>
     <color name="color_bd1b21">#bd1b21</color>
     <color name="color_fce8e6">#fce8e6</color>
+    <color name="color_fbe7e5">#fbe7e5</color>
     <color name="color_fef5ed">#fef5ed</color>
     <color name="color_ffe5ce">#ffe5ce</color>
+    <color name="color_ffcea3">#ffcea3</color>
     <color name="color_ff7800">#ff7800</color>
     <color name="color_ffd7b4">#ffd7b4</color>
     <color name="color_fdf5ed">#fdf5ed</color>
     <color name="color_b31f23">#b31f23</color>
     <color name="black">#000000</color>
+    <color name="transparent">#00000000</color>
 
 </resources>
