--- a/Cadres/app/src/main/res/layout/activity_gb.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb.xml
@@ -5,6 +5,19 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group_View_top"
+        android:layout_width="wrap_content"
+        app:constraint_referenced_ids="
+        view_top,
+        view_top_title,tv_top_title,tv_top_btn,
+        view_top_title2,tv_top_hdzs,tv_top_hdzs2,tv_top_sjpb,tv_top_sjpb2,
+        view_top_line,
+        view_top_title3,tv_top_cpqk,tv_top_cpqk2,tv_top_kqqk,tv_top_kqqk2"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:layout_height="wrap_content"/>
+
     <View
         android:id="@+id/view_top"
         android:layout_width="0dp"
@@ -105,6 +118,7 @@
         android:layout_height="wrap_content"/>
 
     <View
+        android:id="@+id/view_top_line"
         android:layout_width="@dimen/dp_1"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@+id/view_top"
@@ -175,15 +189,15 @@
         android:layout_marginEnd="@dimen/dp_15"
         android:overScrollMode="never"
         android:scrollbars="none"
+        app:layout_goneMarginTop="@dimen/dp_20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/view_bottom"
         app:layout_constraintTop_toBottomOf="@+id/view_top">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            xmlns:tools="http://schemas.android.com/tools">
+            android:layout_height="match_parent">
 
             <View
                 android:id="@+id/view_title"
@@ -218,10 +232,11 @@
 
             <TextView
                 android:id="@+id/tv_xrzw"
-                android:layout_width="@dimen/dp_80"
+                android:layout_width="@dimen/dp_140"
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:textSize="14sp"
+                android:maxLines="3"
                 app:layout_constraintStart_toEndOf="@+id/tv_name"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -236,51 +251,29 @@
                 app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="任现职时间"/>
+                android:text="现任职时间"/>
 
             <TextView
-                android:id="@+id/tv_zkzsj"
-                android:layout_width="@dimen/dp_90"
+                android:id="@+id/tv_zwjb"
+                android:layout_width="@dimen/dp_100"
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_xrzsj"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="正科职时间"/>
+                android:text="职务级别"/>
 
             <TextView
-                android:id="@+id/tv_zkjsj"
+                android:id="@+id/tv_rzjsj"
                 android:layout_width="@dimen/dp_90"
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_zkzsj"
+                app:layout_constraintStart_toEndOf="@+id/tv_zwjb"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="正科级时间"/>
-
-            <TextView
-                android:id="@+id/tv_fkjsj"
-                android:layout_width="@dimen/dp_90"
-                android:layout_height="0dp"
-                android:textSize="14sp"
-                android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_zkjsj"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="副科级时间"/>
-
-            <TextView
-                android:id="@+id/tv_fkzsj"
-                android:layout_width="@dimen/dp_90"
-                android:layout_height="0dp"
-                android:gravity="center"
-                android:textSize="14sp"
-                app:layout_constraintStart_toEndOf="@+id/tv_fkjsj"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="副科职时间"/>
+                android:text="任职级时间"/>
 
             <TextView
                 android:id="@+id/tv_sex"
@@ -288,14 +281,14 @@
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_fkzsj"
+                app:layout_constraintStart_toEndOf="@+id/tv_rzjsj"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
                 android:text="性别"/>
 
             <TextView
                 android:id="@+id/tv_nation"
-                android:layout_width="@dimen/dp_50"
+                android:layout_width="@dimen/dp_90"
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
@@ -306,7 +299,7 @@
 
             <TextView
                 android:id="@+id/tv_place"
-                android:layout_width="@dimen/dp_50 "
+                android:layout_width="@dimen/dp_90"
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
@@ -378,5 +371,61 @@
 
     </HorizontalScrollView>
 
+    <View
+        android:id="@+id/view_bottom"
+        android:layout_width="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/color_b31f23"
+        android:layout_height="@dimen/title_height"/>
+
+    <View
+        android:id="@+id/view_menu"
+        android:layout_width="@dimen/dp_180"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view_bottom"
+        app:layout_constraintTop_toTopOf="@+id/view_bottom"
+        app:layout_constraintStart_toStartOf="@+id/view_bottom"/>
+
+    <ImageView
+        android:id="@+id/iv_menu"
+        android:layout_width="@dimen/dp_20"
+        app:layout_constraintTop_toTopOf="@+id/view_menu"
+        app:layout_constraintBottom_toBottomOf="@+id/view_menu"
+        app:layout_constraintStart_toStartOf="@+id/view_menu"
+        android:layout_marginStart="@dimen/dp_30"
+        android:src="@mipmap/ic_menu"
+        android:layout_height="@dimen/dp_20"/>
+
+    <TextView
+        android:id="@+id/tv_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/view_menu"
+        app:layout_constraintBottom_toBottomOf="@+id/view_menu"
+        android:layout_marginStart="@dimen/dp_15"
+        android:text="单位目录"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/iv_menu"/>
+
+    <EditText
+        android:id="@+id/et_search"
+        android:layout_width="@dimen/dp_420"
+        android:layout_height="@dimen/dp_42"
+        android:background="@color/color_fbe7e5"
+        android:layout_marginEnd="@dimen/dp_40"
+        app:layout_constraintEnd_toEndOf="@+id/view_bottom"
+        app:layout_constraintTop_toTopOf="@+id/view_bottom"
+        android:hint="请输入干部姓名进行搜索"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:maxLength="15"
+        android:maxLines="1"
+        android:drawableLeft="@mipmap/ic_search"
+        android:drawablePadding="@dimen/dp_10"
+        android:paddingStart="@dimen/dp_15"
+        android:paddingEnd="@dimen/dp_15"
+        app:layout_constraintBottom_toBottomOf="@+id/view_bottom"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
