--- a/Cadres/app/src/main/res/values/dimens.xml
+++ b/Cadres/app/src/main/res/values/dimens.xml
@@ -24,14 +24,17 @@
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_25">25dp</dimen>
+    <dimen name="dp_26">26dp</dimen>
     <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_35">35dp</dimen>
     <dimen name="dp_38">38dp</dimen>
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_42">42dp</dimen>
     <dimen name="dp_44">44dp</dimen>
+    <dimen name="dp_46">46dp</dimen>
     <dimen name="dp_50">50dp</dimen>
     <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_66">66dp</dimen>
     <dimen name="dp_70">70dp</dimen>
     <dimen name="dp_75">75dp</dimen>
     <dimen name="dp_80">80dp</dimen>
@@ -47,6 +50,7 @@
     <dimen name="dp_180">180dp</dimen>
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_220">220dp</dimen>
+    <dimen name="dp_230">230dp</dimen>
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_260">260dp</dimen>
     <dimen name="dp_280">280dp</dimen>
