--- a/Cadres/app/src/main/res/layout/item_gb.xml
+++ b/Cadres/app/src/main/res/layout/item_gb.xml
@@ -173,4 +173,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="在职文化程度"/>
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/color_ffd7b4"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
