--- a/Cadres/app/src/main/res/layout/fragment_gb_family.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_family.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_start_time"
+        android:id="@+id/tv_cw"
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:gravity="center"
@@ -22,69 +22,90 @@
         app:layout_constraintStart_toStartOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:text="开始时间"/>
+        android:text="称谓"/>
 
     <View
         android:layout_width="@dimen/dp_1"
         android:background="@color/color_ffd7b4"
-        app:layout_constraintStart_toEndOf="@+id/tv_start_time"
-        app:layout_constraintEnd_toStartOf="@+id/tv_end_time"
+        app:layout_constraintStart_toEndOf="@+id/tv_cw"
+        app:layout_constraintEnd_toStartOf="@+id/tv_xm"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:layout_height="0dp"/>
 
     <TextView
-        android:id="@+id/tv_end_time"
+        android:id="@+id/tv_xm"
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:gravity="center"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_start_time"
+        app:layout_constraintStart_toEndOf="@+id/tv_cw"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:text="结束时间"/>
+        android:text="姓名"/>
 
     <View
         android:layout_width="@dimen/dp_1"
         android:background="@color/color_ffd7b4"
-        app:layout_constraintStart_toEndOf="@+id/tv_end_time"
-        app:layout_constraintEnd_toStartOf="@+id/tv_lx"
+        app:layout_constraintStart_toEndOf="@+id/tv_xm"
+        app:layout_constraintEnd_toStartOf="@+id/tv_csny"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:layout_height="0dp"/>
 
     <TextView
-        android:id="@+id/tv_lx"
+        android:id="@+id/tv_csny"
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:gravity="center"
         android:textSize="14sp"
         android:maxLines="3"
-        app:layout_constraintStart_toEndOf="@+id/tv_end_time"
+        app:layout_constraintStart_toEndOf="@+id/tv_xm"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:text="类型"/>
+        android:text="出生日期(年龄)"/>
 
     <View
         android:layout_width="@dimen/dp_1"
         android:background="@color/color_ffd7b4"
-        app:layout_constraintStart_toEndOf="@+id/tv_lx"
-        app:layout_constraintEnd_toStartOf="@+id/tv_nr"
+        app:layout_constraintStart_toEndOf="@+id/tv_csny"
+        app:layout_constraintEnd_toStartOf="@+id/tv_zzmm"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:layout_height="0dp"/>
 
     <TextView
-        android:id="@+id/tv_nr"
+        android:id="@+id/tv_zzmm"
+        android:layout_width="@dimen/dp_140"
+        android:layout_height="0dp"
+        android:textSize="14sp"
+        android:gravity="center"
+        app:layout_constraintStart_toEndOf="@+id/tv_csny"
+        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        android:text="政治面貌"/>
+
+    <View
+        android:layout_width="@dimen/dp_1"
+        android:background="@color/color_ffd7b4"
+        app:layout_constraintStart_toEndOf="@+id/tv_zzmm"
+        app:layout_constraintEnd_toStartOf="@+id/tv_gzdwjzw"
+        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        android:layout_height="0dp"/>
+
+    <TextView
+        android:id="@+id/tv_gzdwjzw"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
         android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_lx"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_zzmm"
+        app:layout_constraintEnd_toEndOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:text="内容"/>
+        android:text="工作单位及职务"/>
+
 
     <View
         android:layout_width="0dp"
@@ -93,6 +114,7 @@
         app:layout_constraintEnd_toEndOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:layout_height="@dimen/dp_1"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
