--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="color_ffd7b4">#ffd7b4</color>
     <color name="color_fdf5ed">#fdf5ed</color>
     <color name="color_b31f23">#b31f23</color>
+    <color name="color_ff0000">#ff0000</color>
+    <color name="color_73060a">#73060a</color>
     <color name="black">#000000</color>
     <color name="transparent">#00000000</color>
 
