--- a/Cadres/app/src/main/res/values/dimens.xml
+++ b/Cadres/app/src/main/res/values/dimens.xml
@@ -33,9 +33,11 @@
     <dimen name="dp_44">44dp</dimen>
     <dimen name="dp_46">46dp</dimen>
     <dimen name="dp_50">50dp</dimen>
+    <dimen name="dp_56">56dp</dimen>
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_66">66dp</dimen>
     <dimen name="dp_70">70dp</dimen>
+    <dimen name="dp_76">76dp</dimen>
     <dimen name="dp_75">75dp</dimen>
     <dimen name="dp_80">80dp</dimen>
     <dimen name="dp_90">90dp</dimen>
