--- a/Cadres/app/src/main/res/values/styles.xml
+++ b/Cadres/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
 
         <item name="android:textSize">@dimen/sp_16</item>
         <item name="android:textColor">@color/color_text</item>
-        <item name="android:windowBackground">@color/color_window_background</item>
+        <item name="android:windowBackground">@color/white</item>
     </style>
 
     <!-- 启动页样式 -->
