--- a/Cadres/app/src/main/res/layout/activity_bm.xml
+++ b/Cadres/app/src/main/res/layout/activity_bm.xml
@@ -21,7 +21,7 @@
             android:background="@drawable/shape_db1b21_fce8e6_r40"
             android:drawableLeft="@mipmap/ic_search"
             android:drawablePadding="@dimen/dp_15"
-            android:hint="请输入文件名进行搜索"
+            android:hint="请输入单位名称进行搜索"
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:maxLength="20"
