--- a/Cadres/app/src/main/res/layout/title_layout.xml
+++ b/Cadres/app/src/main/res/layout/title_layout.xml
@@ -86,9 +86,11 @@
         android:layout_marginLeft="@dimen/dp_30"
         android:layout_marginRight="@dimen/dp_30"
         android:ellipsize="end"
+        android:textStyle="bold"
         android:gravity="center"
         android:inputType="text"
         android:maxLines="1"
+        android:textSize="@dimen/sp_18"
         android:minHeight="44dp"
         android:textColor="@color/white"
         android:visibility="visible"
