--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -22,10 +22,14 @@
     <color name="color_b31f23">#b31f23</color>
     <color name="color_ff0000">#ff0000</color>
     <color name="color_73060a">#73060a</color>
+    <color name="color_23cffd">#23cffd</color>
+    <color name="color_15415b">#15415B</color>
     <color name="black">#000000</color>
     <color name="transparent">#00000000</color>
     <color name="color_ffe5ce">#ffe5ce</color>
     <color name="color_fd895b">#fd895b</color>
+    <color name="color_eac71c">#eac71c</color>
+    <color name="color_0b1342">#02051C</color>
 
     <color name="color_ffe1e2">#ffe1e2</color>
     <color name="color_ff6569">#ff6569</color>
