--- a/Cadres/app/src/main/res/values/dimens.xml
+++ b/Cadres/app/src/main/res/values/dimens.xml
@@ -31,6 +31,7 @@
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_42">42dp</dimen>
     <dimen name="dp_44">44dp</dimen>
+    <dimen name="dp_45">45dp</dimen>
     <dimen name="dp_46">46dp</dimen>
     <dimen name="dp_50">50dp</dimen>
     <dimen name="dp_56">56dp</dimen>
