--- a/Cadres/app/src/main/res/layout/fragment_yjjc_cadre.xml
+++ b/Cadres/app/src/main/res/layout/fragment_yjjc_cadre.xml
@@ -424,7 +424,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/tv_hytj"
                 app:layout_constraintTop_toBottomOf="@+id/tv_hytj"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="的票"/>
+                android:text="得票"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
