--- a/Cadres/app/src/main/res/layout/item_zcfg.xml
+++ b/Cadres/app/src/main/res/layout/item_zcfg.xml
@@ -24,21 +24,26 @@
         android:minLines="2"
         android:paddingStart="@dimen/dp_20"
         app:layout_constraintTop_toBottomOf="@+id/iv_img"
-        android:layout_marginTop="@dimen/dp_10"
         android:paddingEnd="@dimen/dp_20"
         android:gravity="center"
+        android:layout_marginTop="@dimen/dp_10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="sssssssssssssssssssssssss" />
 
     <TextView
         android:id="@+id/tv_type"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/iv_img"
+        app:layout_constraintStart_toStartOf="@+id/iv_img"
+        android:layout_marginStart="@dimen/dp_15"
+        android:layout_marginEnd="@dimen/dp_15"
         android:layout_marginTop="@dimen/dp_10"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_img"
+        android:textColor="@color/white"
+        android:layout_marginBottom="@dimen/dp_20"
         tools:text="法律法规" />
 
 
