（紧急）7、干部名册列表中的单位名称下面的按钮名字改成“政治建设考察情况”，点击政治建设考察情况页面中需要给出标题：“领导班子政治建设考察情况” 6、干部名册列表中的单位目录中搜索功能未完成、并且没有选中效果，父级菜单需要加粗，点击父级菜单时显示所有下辖的干部信息。。。底部的展示全部去掉

--- a/Cadres/app/src/main/res/layout/item_gb_left.xml
+++ b/Cadres/app/src/main/res/layout/item_gb_left.xml
@@ -5,8 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:text="标题"
+    android:paddingStart="@dimen/dp_20"
+    android:paddingEnd="@dimen/dp_20"
     android:paddingTop="@dimen/dp_10"
-    android:paddingBottom="@dimen/dp_10">
+    android:paddingBottom="@dimen/dp_10"
+    tools:text="标题">
 
 </TextView>
