--- a/Cadres/app/src/main/res/layout/activity_gb.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb.xml
@@ -62,7 +62,7 @@
         android:paddingBottom="@dimen/dp_5"
         android:paddingStart="@dimen/dp_10"
         android:paddingEnd="@dimen/dp_10"
-        android:text="正处级单位"/>
+        android:text="政治建设考察情况"/>
 
     <View
         android:id="@+id/view_top_title2"
