--- a/Cadres/app/src/main/res/layout/activity_gb_drawer.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb_drawer.xml
@@ -13,15 +13,34 @@
         android:layout_height="match_parent" />
 
     <LinearLayout
-        android:layout_width="@dimen/dp_200"
+        android:layout_width="@dimen/dp_260"
         android:layout_height="match_parent"
         android:background="@color/white"
+        android:orientation="vertical"
         android:layout_gravity="start">
+
+        <EditText
+            android:id="@+id/et_left_search"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_42"
+            android:background="@color/color_fbe7e5"
+            android:layout_marginStart="@dimen/dp_20"
+            android:layout_marginEnd="@dimen/dp_20"
+            android:hint="搜索"
+            android:layout_marginTop="@dimen/dp_20"
+            android:layout_marginBottom="@dimen/dp_20"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:maxLength="10"
+            android:maxLines="1"
+            android:drawableLeft="@mipmap/ic_search"
+            android:drawablePadding="@dimen/dp_10"
+            android:paddingStart="@dimen/dp_15"
+            android:paddingEnd="@dimen/dp_15"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_left"
             android:layout_width="match_parent"
-            android:layout_margin="@dimen/dp_20"
             android:overScrollMode="never"
             android:layout_height="match_parent"/>
 
@@ -38,16 +57,13 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:paddingTop="@dimen/dp_20"
-            android:paddingBottom="@dimen/dp_20"
-            android:paddingStart="@dimen/dp_10"
-            android:paddingEnd="@dimen/dp_10"
+            android:padding="@dimen/dp_20"
             android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/tv_right_title"
                 android:layout_width="wrap_content"
-                tools:text="标题"
+                android:text="领导班子政治建设考察情况"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -77,7 +93,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_right_btn"
                 android:layout_marginTop="@dimen/dp_30"
                 app:layout_constraintBottom_toBottomOf="parent"
-                tools:text="adsfasdfasdfadsfa"
+                tools:text="sssssssssssssss"
                 android:layout_height="0dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
